# OGS_mHM

./: .gitignore  Doxyfile  FEM.cmake  GUI.cmake  README.md  README.md~  README.txt  SetupLibs.bat
Base/: CMakeLists.txt  CorrectScientificNotationMain.cpp  DateTools.h  StringTools.cpp  binarySearch.h
CMakeConfiguration/: BuildExternalLibs.cmake  FindGEMlib.cmake  FindMKL.cmake  FindShapelib.cmake  FindVRPN.cmake  Findquatlib.cmake  LibFindMacros.cmake  Options.cmake  Pack.cmake
EQL/: CMakeLists.txt  cacint.h
FEM/: CMakeLists.txt  DistributionInfo.h  FEMCondition.cpp  FEMEnums.cpp  GeoInfo.h  Stiff_Bulirsch-Stoer.h  bcpp_b.sh  display.h  equation_class.cpp  fem_ele.cpp  fem_ele_vec.cpp  femlib.cpp  files0.h  intrface.cpp  makros.h  mathlib.cpp  matrix.h  matrix_class.h  memory.cpp  par_ddc.h  pcs_dm.cpp  problem.h  rf_REACT_BRNS.cpp  rf_REACT_BRNS.h  rf_bc_new.cpp  rf_fct.cpp  rf_kinreact.cpp  rf_mfp_new.h  rf_mmp_new.cpp  rf_msp_new.cpp  rf_node.h  rf_num_new.cpp  rf_out_new.cpp  rf_out_new.h  rf_pcs.cpp  rf_pcs.h  rf_react.cpp  rf_react.h  rfmat_cp.cpp  rfmat_cp.h  (+2 more)
FileIO/: GMSHInterface.h  GMSInterface.cpp  GMSInterface.h  GocadInterface.cpp  GocadInterface.h  NetCDFInterface.cpp  OGSIOVer4.cpp  OpenGeoSysGLI.xsd  PetrelInterface.cpp  PetrelInterface.h  SHPInterface.cpp  SHPInterface.h  XMLInterface.h
GEO/: CMakeLists.txt  Color.cpp  DivideAndConquerClosestPair.cpp  GEOObjects.cpp  GEOObjects.h  PointVec.h  PointWithID.h  PolylineSmoother.cpp  PolylineSmoother.h  ProjectData.cpp  SimplePolygonTree.h  Surface.cpp  Triangle.h  geo_dom.h  geo_lib.cpp  geo_lib.h  geo_lin.cpp  geo_lin.h  geo_mathlib.cpp  geo_ply.cpp  geo_pnt.h  geo_sfc.cpp  geo_sfc.h  geo_vol.h  objects.mak
MSH/: CMakeLists.txt  MSHEnums.cpp  MSHEnums.h  MeshNodesAlongPolyline.h  MeshQualityChecker.cpp  MeshQualityChecker.h  admin.h  msh_core.h.orig  msh_edge.cpp  msh_edge.h  msh_elem.h  msh_gen.cpp  msh_lib.cpp  msh_lib.h  msh_mat.cpp  msh_mesh.h  msh_node.cpp  msh_pnt.cpp  objects.mak
MSH/Delaunay/: DT_Matrix.h  tri_algebra.cpp  tri_triangulation.cpp  tri_utility.cpp  tricommon.h
MSH/NW/: 2dd2-io.f  2dd2-main.f
MSH/TM/: dtm_calculate.cpp  dtm_calculate.h  dtm_crowd.cpp  dtm_crowd.h  dtm_element.h  dtm_error.h  dtm_figure.cpp  dtm_figure.h  dtm_fixed.h  dtm_gpnode.cpp  dtm_gpnode.h  dtm_gptetra.cpp  dtm_gptetra.h  dtm_gptriangle.cpp  dtm_gptriangle.h  dtm_laplas.cpp  dtm_node.cpp  dtm_plane.cpp  dtm_plane.h  dtm_point.cpp  dtm_stdio.cpp  dtm_stdio.h  dtm_surface.h  dtm_tetgen.cpp  dtm_tetra.h  dtmesh.cpp  dtmesh.h
MSH/mat_mapping/: MappingMatBetweenTwoMeshes.cpp  bcpp.sh
MathLib/: CubicSpline.cpp  CubicSpline.h  LinearInterpolation.cpp  (+4 more)
OGS5/: CMakeCache.txt  CMakeLists.txt  LICENSE.txt  au.txt
OGS5/Base/: BuildInfo.h.in  Configure.h.in  StringTools.h  wait.h
OGS5/CMakeConfiguration/: AddBenchmark.cmake  FindLIS.cmake  FindLibGeoTiff.cmake  FindLibTiff.cmake  FindVTK.cmake  InstallRequiredSystemLibraries.cmake  Macros.cmake
OGS5/EQL/: cacint.cpp  eqlink.cpp  eqlink.h
OGS5/FEM/: DistributionInfo.cpp  FEMCondition.h  FEMEnums.h  GeoInfo.cpp  ProcessInfo.cpp  ProcessInfo.h  Stiff_Bulirsch-Stoer.cpp  break.cpp  break.h  display.cpp  eos.cpp  eos.h  equation_class.h  fem_ele.h  fem_ele_std.cpp  fem_ele_std.h  fem_ele_vec.h  femlib.h  files0.cpp  form1.sh  intrface.h  mathlib.h  matrix.cpp  matrix_class.cpp  memory.h  objects.mak  par_ddc.cpp  pcs_dm.h  problem.cpp  prototyp.h  rf_REACT_GEM.cpp  rf_REACT_GEM.h  rf_bc_new.h  rf_fct.h  rf_fluid_momentum.cpp  rf_fluid_momentum.h  rf_ic_new.cpp  rf_ic_new.h  rf_kinreact.h  rf_mfp_new.cpp  (+17 more)
OGS5/FileIO/: CMakeLists.txt  GMSHInterface.cpp  NetCDFInterface.h  OGSIOVer4.h  OpenGeoSysCond.xsd  OpenGeoSysSTN.xsd  StationIO.cpp  StationIO.h  XMLInterface.cpp
OGS5/FileIO/MathIO/: CRSIO.h
OGS5/GEM/: CMakeLists.txt  makefile  objects.mak
OGS5/GEO/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BruteForceClosestPair.cpp  ClosestPair.h  DivideAndConquerClosestPair.h  GeoType.h  PointVec.cpp  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  ProjectData.h  QuadTree.h  Station.cpp  Surface.h  geo_dom.cpp  geo_mathlib.h  geo_ply.h  geo_pnt.cpp  geo_vol.cpp
OGS5/MSH/: MeshNodesAlongPolyline.cpp  msh_core.cpp  msh_core.h  msh_elem.cpp  msh_elem.h.orig  msh_mesh.cpp  msh_node.h
OGS5/MSH/Delaunay/: tri_geometry.cpp  tri_main.cpp
OGS5/MSH/NW/: 2dd2-common.f  2dd2-fine.f  2dd2-lib.f  2dd2-model.f  2dd2-point.f  2dd2-rough.f  delaunay2D.cpp  delaunay2D.h  delaunay3D.cpp  delaunay3D.h
OGS5/MSH/TM/: DTMP050.dsw  dtm_error.cpp  dtm_group.h  dtm_laplas.h  dtm_neighbor.cpp  dtm_neighbor.h  dtm_node.h  dtm_point.h  dtm_surface.cpp  dtm_tetgen.h  dtm_tetra.cpp  dtm_timer.h  dtm_triangle.cpp  dtm_triangle.h  main.cpp
OGS5/MSH/TM/in/: urach-min.3dtri
OGS5/MSH/mat_mapping/: MappingMatBetweenTwoMeshes.h
OGS5/MathLib/: AnalyticalGeometry.cpp  AnalyticalGeometry.h  CMakeLists.txt  EarClippingTriangulation.h  LinearInterpolation.h  LinkedTriangle.cpp  LinkedTriangle.h  MathTools.h
OGS5/MathLib/LinAlg/: DenseDirectLinearSolver.h  DirectLinearSolver.h  GaussAlgorithm.cpp  GaussAlgorithm.h  IterativeLinearSolver.h  LinearSolver.h  TriangularSolve.h
OGS5/PQC/: CMakeLists.txt
OGS5/UTL/: benchtimer.h  tokenbuf.cpp  tokenbuf.h
OGS5/UTL/FileConverter/: CMakeLists.txt  ConvertSHPToGLI.cpp
OGS5/UTL/GIS2FEM/: README.txt
OGS5/UTL/MSHGEOTOOLS/: ExtractMeshNodes.h  ModifyMeshProperties.cpp  mainExtractMeshNodes.cpp  mainExtractSurface.cpp  mainModifyMeshProperties.cpp
OGS5/configs/: PQC.cmake  chemapp.cmake  gems.cmake  vc_lis.cmake
OGS5/scripts/: bench_info.rb  build_configs.bat  build_gui.bat  commit_info.rb  process_benchmark_job.rb  run_benchmarks.sh
OGS5/tests/: testBase.cpp  testGeo.cpp  testOgs.cxx
OGS5/tests/GEO/: CMakeLists.txt  testPointInTriangle.cpp
OGSProject/: CMakeLists.txt  gs_project.cpp  gs_project.h
UTL/MSHGEOTOOLS/: CMakeLists.txt  ExtractMeshNodes.cpp  ExtractSurface.cpp  ExtractSurface.h  ModifyMeshProperties.h  filterMeshNodes.cpp
tests/: CMakeLists.txt  testBmSkel.cxx  testrunner.cpp
tests/data/bmskel/: CMakeLists.txt
(+2648 files in other folders)
